# recommender

./: Dockerfile  README.md  env.sample  gunicorn.conf.py  pyproject.toml
.github/workflows/: docker-build.yaml
recommender/: application.py  model.py
